Primer-Portfolio-Update

--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
                 <div>    
                     <h1>Hola ✍</h1>
                     <p class="presentacion">
-                        Mi nombre es Mauro Gabriel Bécares, estudiante de la Tecnicatura Universitaria en Programación
-                        de la Universidad Tecnológica Nacional: Facultad Regional Rosario. Mediante los estudios que adquirí tengo 
-                        conocimientos sobre C# y SQL, en el cual lo conseguí gracias a los cursos que realice.                 
+                        Mi nombre es Mauro Gabriel Bécares, soy estudiante de la Tecnicatura Universitaria en Programación en la Universidad Tecnológica Nacional, Facultad Regional Rosario. Gracias a mis estudios, he adquirido conocimientos en C# y SQL, los cuales he obtenido mediante la realización de cursos.           
                     </p>
                 </div>
             </div>
@@ -42,9 +40,7 @@
     <section class="dos">
         <h2>Sobre mí</h2>
         <p>
-            Actualmente soy Administrativo en un Operador Mayorista de Viajes en donde aprendí mucho sobre manejo de sistemas que se utilizan para
-            el rubro. Mi deseo es poder trabajar en el ámbito de la Programación, un mundo en el que, al momento que lo descubrí me ha encantado.
-            Sigo dedicando todo mi esfuerzo tanto en la universidad como también en el aprendizaje de la plataforma .NET   
+            Actualmente, trabajo como Administrativo en un Operador Mayorista de Viajes, donde obtuve conocimientos sobre el manejo de sistemas utilizados en el rubro. Sin embargo, mi deseo es poder trabajar en el ámbito de la Programación, ya que desde que lo descubrí, me ha apasionado. Continúo dedicando todo mi esfuerzo tanto en la universidad como en el aprendizaje de la plataforma .NET.
         </p>
         <h2>Aptitudes</h2>
         <p>
@@ -87,8 +83,15 @@
                 <a href="https://github.com/MauroGBecares" target="_blank">
                     <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" class="red-social" alt="">
                 </a>
+                <a href="https://drive.google.com/file/d/1k1ceaSjuDHCpxyOvk9D8mp9g3tGYbRqn/view?usp=sharing" target="_blank">
+                    <img src="https://static.vecteezy.com/system/resources/previews/014/528/281/non_2x/headhunter-cv-mail-icon-outline-style-vector.jpg" class="red-social" alt="">
+                </a>
+                
             </div>
-            <p style="padding-top: 30px;">Hecho con ayuda de <a href="https://maxiprograma.com" target="_blank">Maxi Programa</a></p>
+            <div>
+                <p>Email: <a href="#enlace">maurobecares26@gmail.com</a></p>
+                <p style="padding-top: 15px;">Hecho con ayuda de <a href="https://maxiprograma.com" target="_blank">Maxi Programa</a></p>
+            </div>
     </footer>
 </body>
 </html>
