--- a/index.html
+++ b/index.html
@@ -176,25 +176,38 @@
   <div class="container-fluid text-center contactos" id="contactos">
     <div class="row">
       <div class="col-sm-4"></div>
-        <form class="col-xl-4" action="https://formsubmit.co/maurobecares26@gmail.com" method="POST">
+        <form class="col-xl-4 needs-validation" novalidate action="https://formsubmit.co/maurobecares26@gmail.com" method="POST">
           <h2>Contactos</h2>
           <div class="mb-3">
             <label for="nombre" class="form-label text-white">Nombre</label>
-            <input type="text" name="name" class="form-control" id="nombre">
+            <input type="text" name="name" class="form-control" id="nombre" required>
+            <div class="invalid-feedback">
+              Debe poner su nombre.
+            </div>
           </div>
           <div class="mb-3">
             <label for="email" class="form-label text-white">Email</label>
-            <input type="email" name="email" class="form-control" id="email" placeholder="name@example.com">
+            <input type="email" name="email" class="form-control" id="email" placeholder="name@example.com" required>
+            <div class="invalid-feedback">
+              Debe poner su email.
+            </div>
           </div>
           <div class="mb-3">
             <label for="asunto" class="form-label text-white">Asunto</label>
-            <input type="text" name="subject" class="form-control" id="asunto">
+            <input type="text" name="subject" class="form-control" id="asunto" required>
+            <div class="invalid-feedback">
+              Debe poner un asunto.
+            </div>
           </div>
           <div class="mb-3">
             <label for="comentarios" class="form-label text-white">Comentarios</label>
-            <textarea class="form-control" name="comments" id="comentarios" rows="5"></textarea>
+            <textarea class="form-control" name="comments" id="comentarios" rows="5" required></textarea>
+            <div class="invalid-feedback">
+              No hay comentarios ingresados.  
+            </div>
           </div>
-          <input type="submit" class="btn btn-primary mt-3"></input>
+          <button type="submit" class="btn btn-primary mt-3">Enviar</button>
+
           <input type="hidden" name="_next" value="https://maurogbecares.github.io/portfolio/"> 
           <input type="hidden" name="_captcha" value="false">
         </form>
@@ -220,6 +233,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
+    <script src="validaciones.js"></script>
 </body>
 
 </html>
