--- a/index.html
+++ b/index.html
@@ -208,6 +208,10 @@
           </div>
           <button type="submit" class="btn btn-primary mt-3">Enviar</button>
 
+          <div class="alert alert-success mt-3" role="alert" style="display: none;">
+            El correo fue enviado correctamente !
+          </div>
+
           <input type="hidden" name="_next" value="https://maurogbecares.github.io/portfolio/"> 
           <input type="hidden" name="_captcha" value="false">
         </form>
@@ -235,5 +239,4 @@
     crossorigin="anonymous"></script>
     <script src="validaciones.js"></script>
 </body>
-
 </html>
