--- a/index.html
+++ b/index.html
@@ -132,39 +132,39 @@
           <h2>Mis Proyectos</h2>
           <hr>
           <div class="card-group">
-            <div class="card">
+            <div class="card border-light">
               <img src="images/proyecto1.png" class="card-img-top imgCarta" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Gestion de veterinaria</h5>
+                <h5 class="card-title bg-info">Gestion de veterinaria</h5>
                 <p class="card-text">Se trata de un programa que permite administrar como también gestionar una
                   veterinaria desde el punto de vista del vendedor y el cliente puede ingresar para realizar pedidos de
                   combos.</p>
               </div>
-              <div class="card-footer">
-                <small class="text-body-secondary"><a href="https://github.com/MauroGBecares/Autoservicio-Veterinaria"><button type="button" class="btn btn-outline-primary">Ver</button></a></button></small>
+              <div class="card-footer border-light">
+                <small class="text-body-secondary"><a href="https://github.com/MauroGBecares/Autoservicio-Veterinaria"><button type="button" class="btn btn-info">Ver</button></a></button></small>
               </div>
             </div>
-            <div class="card">
+            <div class="card border-light">
               <img src="images/proyecto2.png" class="card-img-top imgCarta" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Formulario con catalogo de discos</h5>
+                <h5 class="card-title bg-info">Formulario con catálogo de discos</h5>
                 <p class="card-text">La app contiene un formulario para ingresar datos como también contiene listado de
                   discos con conexión a DB en el cual se puede agregar, quitar y modificar los mismos.</p>
               </div>
-              <div class="card-footer">
-                <small class="text-body-secondary"><a href="https://github.com/MauroGBecares/ProyectoDiscos"><button type="button" class="btn btn-outline-primary">Ver</button></a></button></small>
+              <div class="card-footer border-light">
+                <small class="text-body-secondary"><a href="https://github.com/MauroGBecares/ProyectoDiscos"><button type="button" class="btn btn-info">Ver</button></a></button></small>
               </div>
             </div>
-            <div class="card">
+            <div class="card border-light">
               <img src="images/proyecto3.png" class="card-img-top imgCarta" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Listado de Artículos</h5>
+                <h5 class="card-title bg-info">Listado de Artículos</h5>
                 <p class="card-text">El proyecto presenta un listado de artículos con conexión a DB que contiene
                   distintas validaciones como también filtros. Además, se puede agregar, modificar y quitar productos.
                 </p>
               </div>
-              <div class="card-footer">
-                <small class="text-body-secondary"><a href="https://github.com/MauroGBecares/TPFinalNivel2_Becares"><button type="button" class="btn btn-outline-primary">Ver</button></a></button></small>
+              <div class="card-footer border-light">
+                <small class="text-body-secondary"><a href="https://github.com/MauroGBecares/TPFinalNivel2_Becares"><button type="button" class="btn btn-info">Ver</button></a></button></small>
               </div>
             </div>
           </div>
@@ -222,7 +222,7 @@
       <div class="col-3"></div>
       <div class="col-md-3 ladoIzquierdo">
         <p class="subtitulo2">Ubicación</p>
-        <p>Rosario, Argentina</p>
+        <p class="text-dark">Rosario, Argentina</p>
       </div>
       <div class="col-md-3 ladoDerecho">
         <p class="subtitulo2">Redes</p>
