--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="row mt-4">
         <div class="col-12 col-md-6 col-lg-4 col-xl-3 d-flex justify-content-center mx-auto">
           <div class="contenedorTitulo">
-            <h3 style="font-size: 20px; font-weight: bold; margin-top: 7px;">Programador .NET</h3>
+            <h3 style="font-size: 20px; font-weight: bold; margin-top: 7px;">DEV.NET FullStack</h3>
           </div>
         </div>
       </div>
@@ -70,7 +70,7 @@
             Programación en la Universidad Tecnológica Nacional,
             Facultad Regional Rosario. Gracias a mis estudios, he adquirido conocimientos en .NET Framework y ASP.NET
             utilizando el lenguaje C#.
-            Además, cuento con habilidades en HTML, CSS, JS, Bootstrap, SQL Server, C y Arduino,
+            Además, cuento con habilidades en HTML, CSS, JS, Bootstrap, SQL Server, C y Python,
             las cuales he desarrollado a través de cursos y mi formación en la universidad.
           </p>
           <p>
@@ -102,7 +102,7 @@
             <img src="images/logo-html.png" class="tech" alt="">
             <img src="images/logo-css.png" class="tech" alt="">
             <img src="images/logo-js.png" class="tech" alt="">
-            <img src="images/logo-bootstrap.png" class="tech" alt="">
+            <img src="images/logo-python.png" class="tech" alt="">
           </div>
           <h2 class="subtitulo">Estudios</h2>
           <div class="list-group listaEstudios">
