--- a/index.html
+++ b/index.html
@@ -106,16 +106,16 @@
           </div>
           <h2 class="subtitulo">Estudios</h2>
           <div class="list-group listaEstudios">
-            <a href="https://dpec.frro.utn.edu.ar/carrera.php?idCarrera=21"
+            <a target="_blank" href="https://dpec.frro.utn.edu.ar/carrera.php?idCarrera=21"
               class="list-group-item list-group-item-action">Tecnicatura Universitaria en Programacion: UTN FRRO - En
               Curso 🕓</a>
-            <a href="https://drive.google.com/file/d/11T6aTLJ3YC6ft7ZEmyf_0qLyASu_lLHE/view?usp=sharing"
+            <a target="_blank" href="https://drive.google.com/file/d/11T6aTLJ3YC6ft7ZEmyf_0qLyASu_lLHE/view?usp=sharing"
               class="list-group-item list-group-item-action">Curso de Programación con C# Nivel 1 [Desde Cero] -
               Terminado ✅</a>
-            <a href="https://drive.google.com/file/d/1kK_UmLDpuHMvBf0uN1ZU6QeAHgtWylaq/view?usp=sharing"
+            <a target="_blank" href="https://drive.google.com/file/d/1kK_UmLDpuHMvBf0uN1ZU6QeAHgtWylaq/view?usp=sharing"
               class="list-group-item list-group-item-action">Curso de Programación con C# Nivel 2: POO + .NET + SQL -
               Terminado ✅</a>
-            <a href="https://drive.google.com/file/d/16sTkD0qaHWPNmcjN9LqRN0fUG2PsitXz/view"
+            <a target="_blank" href="https://drive.google.com/file/d/16sTkD0qaHWPNmcjN9LqRN0fUG2PsitXz/view"
               class="list-group-item list-group-item-action">Curso de Programación con C# Nivel 3 ASP.NET WebForms - En
               Curso 🕓</a>
           </div>
@@ -141,7 +141,7 @@
                   combos.</p>
               </div>
               <div class="card-footer border-light">
-                <small class="text-body-secondary"><a href="https://github.com/MauroGBecares/Autoservicio-Veterinaria"><button type="button" class="btn btn-info">Ver</button></a></button></small>
+                <small class="text-body-secondary"><a target="_blank" href="https://github.com/MauroGBecares/Autoservicio-Veterinaria"><button type="button" class="btn btn-info">Ver</button></a></button></small>
               </div>
             </div>
             <div class="card border-light">
@@ -152,7 +152,7 @@
                   discos con conexión a DB en el cual se puede agregar, quitar y modificar los mismos.</p>
               </div>
               <div class="card-footer border-light">
-                <small class="text-body-secondary"><a href="https://github.com/MauroGBecares/ProyectoDiscos"><button type="button" class="btn btn-info">Ver</button></a></button></small>
+                <small class="text-body-secondary"><a target="_blank" href="https://github.com/MauroGBecares/ProyectoDiscos"><button type="button" class="btn btn-info">Ver</button></a></button></small>
               </div>
             </div>
             <div class="card border-light">
@@ -164,7 +164,7 @@
                 </p>
               </div>
               <div class="card-footer border-light">
-                <small class="text-body-secondary"><a href="https://github.com/MauroGBecares/TPFinalNivel2_Becares"><button type="button" class="btn btn-info">Ver</button></a></button></small>
+                <small class="text-body-secondary"><a target="_blank" href="https://github.com/MauroGBecares/TPFinalNivel2_Becares"><button type="button" class="btn btn-info">Ver</button></a></button></small>
               </div>
             </div>
           </div>
