--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="row mt-4">
         <div class="col-12 col-md-6 col-lg-4 col-xl-3 d-flex justify-content-center mx-auto">
           <div class="contenedorTitulo">
-            <h3 style="font-size: 20px; font-weight: bold; margin-top: 7px;">DEV.NET FullStack</h3>
+            <h3 style="font-size: 20px; font-weight: bold; margin-top: 7px;">FullStack Developer</h3>
           </div>
         </div>
       </div>
