Cambio titulo de las cartas del proyecto

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="card border-light">
               <img src="images/proyecto1.png" class="card-img-top imgCarta" alt="...">
               <div class="card-body">
-                <h5 class="card-title bg-info rounded-pill">Gestion de veterinaria</h5>
+                <h5 class="card-title">Gestion de veterinaria</h5>
                 <p class="card-text">Se trata de un programa que permite administrar como también gestionar una
                   veterinaria desde el punto de vista del vendedor y el cliente puede ingresar para realizar pedidos de
                   combos.</p>
@@ -147,7 +147,7 @@
             <div class="card border-light">
               <img src="images/proyecto2.png" class="card-img-top imgCarta" alt="...">
               <div class="card-body">
-                <h5 class="card-title bg-info rounded-pill">Formulario con catálogo de discos</h5>
+                <h5 class="card-title">Formulario con catálogo de discos</h5>
                 <p class="card-text">La app contiene un formulario para ingresar datos como también contiene listado de
                   discos con conexión a DB en el cual se puede agregar, quitar y modificar los mismos.</p>
               </div>
@@ -158,7 +158,7 @@
             <div class="card border-light">
               <img src="images/proyecto3.png" class="card-img-top imgCarta" alt="...">
               <div class="card-body">
-                <h5 class="card-title bg-info rounded-pill">Listado de Artículos</h5>
+                <h5 class="card-title">Listado de Artículos</h5>
                 <p class="card-text">El proyecto presenta un listado de artículos con conexión a DB que contiene
                   distintas validaciones como también filtros. Además, se puede agregar, modificar y quitar productos.
                 </p>
